chore: update name in html files

--- a/src/suspended.html
+++ b/src/suspended.html
@@ -52,7 +52,7 @@
 		</div>
 	</div>
 	<div class="watermark">
-		The Great Suspender
+		The Greater Suspender
 	</div>
 
 	<div id="refreshSpinner"></div>
