--- a/src/tests.html
+++ b/src/tests.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="js/tests/test_gsUtils.js"></script>
     <script type="text/javascript" src="js/tests/test_gsTabQueue.js"></script>
     <script type="text/javascript" src="js/tests/tests.js"></script>
-    <title id="gsTitle">The Great Suspender is testing</title>
+    <title id="gsTitle">The Greater Suspender is testing</title>
 </head>
 
 <body class="splash-wrap">
